<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_back_2"
    tools:context=".Facilities">


    <ImageView
        android:id="@+id/ivCityImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="15sp"
        android:src="@drawable/mumbai_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etcityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCityImage" />

    <LinearLayout
        android:id="@+id/llFascilities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        android:background="#D20A0B0E"
        android:paddingTop="50sp">


        <Button
            android:id="@+id/btnHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#C4287C2C"
            android:text="@string/book_hotel"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:backgroundTint="#C4287C2C"
            android:text="@string/history"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnbookBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:backgroundTint="#C4287C2C"
            android:text="@string/book_travels"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnTouristMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:backgroundTint="#C4287C2C"
            android:text="@string/tourist_map"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>