<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="Forgot Password"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/llForgotPass"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#54FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEnterMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:paddingTop="20sp"
            android:text="Enter Gmail"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50sp"
            android:drawableStart="@drawable/ic_action_name"
            android:hint=" Gmail"
            android:inputType="textWebEmailAddress"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="#25000000"
            android:text="Send OTP"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/enterOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:inputType="number"
            android:maxLength="4"
            android:layout_marginTop="20sp"
            android:hint="Enter OTP"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/new_password"
            android:visibility="invisible"
            android:inputType="textPassword"
            android:paddingTop="30sp"
            android:paddingEnd="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirm_new_password"
            android:visibility="invisible"
            android:inputType="textPassword"
            android:paddingTop="30sp"
            android:paddingEnd="20dp"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:backgroundTint="#25000000"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llForgotPass" />
</androidx.constraintlayout.widget.ConstraintLayout>